# dgx-spark-playbooks

./: CONTRIBUTING.md  LICENSE-3rd-party  README.md  plugin.json
.claude-plugin/: marketplace.json
.github/workflows/: regenerate-skills.yml
community/: PLAYBOOK-GUIDELINES.md  README.md
community/cbag/: README.md
community/litguard/: Dockerfile  Dockerfile.ui  README.md  config.yaml  docker-compose.yaml  nginx.conf  pyproject.toml
community/litguard/playbook/: setup.sh
community/litguard/src/server/: app.py  metrics.py  models.py
community/litguard/ui/: index.html  package.json  vite.config.ts
community/litguard/ui/src/: App.tsx  index.css
community/litguard/ui/src/components/: ClassificationChart.tsx  MetricsPanel.tsx  ModelStatus.tsx  RequestsTable.tsx
community/litguard/ui/src/hooks/: useMetrics.ts
nvidia/cli-coding-agent/: README.md
nvidia/connect-three-sparks/: README.md
nvidia/connect-two-sparks/: README.md
nvidia/cuda-x-data-science/: README.md
nvidia/cutile-kernels/: README.md
nvidia/dgx-dashboard/: README.md
nvidia/dgx-spark-mcp-server/: README.md
nvidia/hermes-agent/: README.md
nvidia/heterogeneous-distributed-inference-rdma/: DISTRIBUTED-INFERENCE.md  README.md
nvidia/i4h-so-arm/: README.md
nvidia/isaac/: README.md
nvidia/live-vlm-webui/: README.md
nvidia/llama-cpp/: README.md
nvidia/llama-factory/: README.md
nvidia/lm-studio/: README.md
nvidia/nemo-fine-tune/: README.md
overrides/: _index.md  connect-to-your-spark.md  ollama.md  open-webui.md  vllm.md
scripts/: generate.mjs  install.sh  uninstall.sh
(+319 files in other folders)
